# antecedent

./: .gitignore  .readthedocs.yaml  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  deny.toml  mkdocs.yml  requirements-docs.txt
crates/antecedent/: Cargo.toml  README.md
crates/antecedent-attribution/: Cargo.toml  README.md
crates/antecedent-attribution/benches/: shapley.rs
crates/antecedent-attribution/src/: anomaly.rs  builder.rs  change_common.rs  coalition.rs  distribution_change.rs  error.rs  feature_relevance.rs  lib.rs  mechanism_change.rs  path.rs  population.rs  prep.rs  result.rs  robust.rs  root_cause.rs  shapley.rs  structure_change.rs  unit_change.rs
crates/antecedent-core/: Cargo.toml  README.md
crates/antecedent-core/src/: error.rs  execution.rs  identification.rs  ids.rs  intervention.rs  lib.rs  node.rs  tolerance.rs
crates/antecedent-data/: Cargo.toml  README.md
crates/antecedent-data/src/: arrow_adapter.rs  arrow_ffi.rs  categorical.rs  column.rs  dataset.rs  error.rs  event.rs  lagged_frame.rs  lib.rs  materialize.rs  multi_env.rs  multi_env_plan.rs  panel.rs  pooled_frame.rs  project.rs  reference.rs  resample.rs  sample.rs  sample_policy.rs  sample_request.rs  selection.rs  sim.rs  split.rs  storage.rs  surrogate.rs  table.rs  temporal.rs  testing.rs  vector_vars.rs
crates/antecedent-data/tests/: arrow_cdi_zero_copy_gate.rs  arrow_copy_gate.rs
crates/antecedent-design/: Cargo.toml  README.md
crates/antecedent-design/benches/: design_rank.rs
crates/antecedent-design/src/: candidate.rs  decision.rs  objective.rs  ranker.rs  result.rs
crates/antecedent-discovery/: Cargo.toml  README.md
crates/antecedent-discovery/benches/: orientation.rs  pag_orientation.rs  pcmci.rs  rpcmci.rs
crates/antecedent-discovery/src/: algorithm.rs  ci.rs  ci_screened_posterior.rs  combinations.rs  constraints.rs  dbn_posterior.rs  discriminating_paths.rs  engine.rs  engine_tests.rs  error.rs  evidence.rs  exact_enumeration.rs  fci.rs  ges.rs  graph_mcmc.rs  graph_posterior.rs  graph_score.rs  jpcmci_plus.rs  lib.rs  lingam.rs  lpcmci.rs  lpcmci_phases.rs  order_mcmc.rs  orientation.rs  orientation_tests.rs  pc.rs  pcmci.rs  pcmci_family.rs  pcmci_plus.rs  pipeline.rs  possible_d_sep.rs  result.rs  rfci.rs  rpcmci.rs  rule_scheduling.rs  rule_scheduling_tests.rs  structure_mcmc.rs  uncovered_paths.rs  weakly_minimal.rs
crates/antecedent-discovery/tests/: discovery_jpcmci_plus_two_env_edges.rs  discovery_masked_mci_lag1.rs  (+6 more)
crates/antecedent-estimate/: Cargo.toml  README.md
crates/antecedent-expr/: Cargo.toml  README.md
crates/antecedent-io/: Cargo.toml  README.md
crates/antecedent-model/: Cargo.toml  README.md
crates/antecedent-prob/: Cargo.toml  README.md
crates/antecedent-state/: Cargo.toml  README.md
crates/antecedent-stats/: Cargo.toml  README.md
crates/antecedent-validate/: Cargo.toml  README.md
crates/causal-analysis/: Cargo.toml  README.md
crates/causal-attribution/: Cargo.toml  README.md
crates/causal-counterfactual/: Cargo.toml  README.md
crates/causal-data/: Cargo.toml  README.md
crates/causal-design/: Cargo.toml  README.md
crates/causal-discovery/: Cargo.toml  README.md
crates/causal-estimate/: Cargo.toml  README.md
crates/causal-expr/: Cargo.toml  README.md
crates/causal-graph/: Cargo.toml  README.md
crates/causal-identify/: Cargo.toml  README.md
crates/causal-io/: Cargo.toml  README.md
crates/causal-kernels/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: arrow_metadata.rs  artifact_container.rs  dag_ops.rs  expression_arena.rs  kernel_reductions.rs  python_boundary.rs  sample_plan.rs  schema_names.rs
python/: Cargo.toml  README.md  pyproject.toml
python/antecedent/: __init__.pyi  attribution.py  attribution.pyi  counterfactual.py  counterfactual.pyi  data.py  data.pyi  design.py  design.pyi  discovery.py  discovery.pyi  estimation.py  estimation.pyi  graph.pyi  ids.py  inference.py  model.py  model.pyi  population.py  query.pyi  state.py  validation.py
python/causal/: __init__.py  __init__.pyi  _data.py  _native.pyi  accepted_graph.py  attribution.py  attribution.pyi  counterfactual.py  counterfactual.pyi  data.py  data.pyi  design.py  design.pyi  discovery.py  discovery.pyi  estimation.py  estimation.pyi  extensibility.py  extensibility.pyi  gcm.py  graph.py  graph.pyi  identification.py  identification.pyi  ids.py  inference.py  inference.pyi  model.py  model.pyi  prior_bank.py  query.py  query.pyi  state.py  state.pyi  validation.py  validation.pyi
python/examples/: causal_state_workflow.py  discover_then_estimate.py  manufacturing_temporal.py  prior_bank_surveys.py  propensity_weighting.py  rank_designs.py  sales_spreadsheet_e2e.py  sequential_bayes.py
python/src/: bayesian.rs  callbacks.rs  design_api.rs  gcm_api.rs  graphs.rs  lib.rs  prepared_api.rs  prior_bank.rs  stability.rs  state_api.rs
python/tests/: test_accepted_graph.py  test_adaptive_mc.py  test_analyze_ate_estimate.py  test_analyze_ate_phase4.py  test_analyze_discovery.py  test_analyze_many.py  test_arrow_cdi_zero_copy_gate.py  test_arrow_copy_gate.py  test_arrow_interactive_smoke.py  test_bayesian_backend.py  test_conditional_effect.py  test_discover_ges.py  test_discover_pcmci.py  test_discover_pcmci_plus.py  test_discover_rpcmci.py  test_discovery_interactive_guard.py  test_eventframe_discovery.py  test_exceptions.py  test_gcm_discovered.py  test_gcm_rich_returns.py  test_graph_interchange.py  test_graph_posterior_analyze.py  test_latency_tiers.py  test_oo_api_parity.py  test_panel_bayesian.py  test_panel_pooled_discovery.py  test_path_distribution_discovery.py  test_population_ipw.py  test_posterior_artifact.py  test_prepared_analysis.py  test_prior_bank.py  test_prior_predictive.py  test_prior_sensitivity.py  test_python_callbacks.py  test_rd_analyze.py  test_refute_second_click.py  test_review_required_ux.py  test_sequential_bayes.py  test_temporal_bayesian_pulse.py  test_temporal_mediation.py  (+1 more)
(+1318 files in other folders)
