[workspace]
resolver = "2"
members = [
    "crates/causal-core",
    "crates/causal-kernels",
    "crates/causal-data",
    "crates/causal-graph",
    "crates/causal-io",
    "python",
]
default-members = [
    "crates/causal-core",
    "crates/causal-kernels",
    "crates/causal-data",
    "crates/causal-graph",
    "crates/causal-io",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/causal-library"
authors = ["Causal Library Contributors"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1
