[workspace]
resolver = "2"
members = [
    "crates/causal-core",
    "crates/causal-kernels",
    "crates/causal-data",
    "crates/causal-graph",
    "crates/causal-io",
    "crates/causal-expr",
    "crates/causal-identify",
    "crates/causal-stats",
    "crates/causal-prob",
    "crates/causal-estimate",
    "crates/causal-validate",
    "crates/causal-model",
    "crates/causal-counterfactual",
    "crates/causal-attribution",
    "crates/causal-design",
    "crates/causal-state",
    "crates/causal",
    "crates/causal-discovery",
    "python",
]
default-members = [
    "crates/causal-core",
    "crates/causal-kernels",
    "crates/causal-data",
    "crates/causal-graph",
    "crates/causal-io",
    "crates/causal-expr",
    "crates/causal-identify",
    "crates/causal-stats",
    "crates/causal-prob",
    "crates/causal-estimate",
    "crates/causal-validate",
    "crates/causal-model",
    "crates/causal-counterfactual",
    "crates/causal-attribution",
    "crates/causal-design",
    "crates/causal-state",
    "crates/causal",
    "crates/causal-discovery",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/causal-library"
authors = ["Causal Library Contributors"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
blake3 = "1"
zstd = "0.13"
memmap2 = "0.9"
faer = "0.21"
arrow-array = { version = "54", default-features = false }
arrow-schema = { version = "54", default-features = false }
arrow-buffer = { version = "54", default-features = false }
arrow-data = { version = "54", default-features = false }
pyo3 = { version = "0.29", features = ["extension-module"] }
numpy = { version = "0.29", default-features = false }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
realfft = "3.5"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1
