[package]
name = "causal-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python extension for causal-library (PyO3)"
publish = false

[lib]
name = "causal"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
causal-core = { path = "../crates/causal-core" }
causal-data = { path = "../crates/causal-data", features = ["arrow"] }
causal = { path = "../crates/causal" }
causal-io = { path = "../crates/causal-io" }
causal-prob = { path = "../crates/causal-prob" }
# Type conversion only (mediation estimand / graph construction for analyze*).
causal-expr = { path = "../crates/causal-expr" }
causal-graph = { path = "../crates/causal-graph" }
causal-model = { path = "../crates/causal-model" }
causal-attribution = { path = "../crates/causal-attribution" }
causal-stats = { path = "../crates/causal-stats" }
causal-validate = { path = "../crates/causal-validate" }
causal-discovery = { path = "../crates/causal-discovery" }
pyo3 = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
numpy = { workspace = true }
serde_json = { workspace = true }
