[package]
name = "antecedent-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Antecedent Python extension (PyO3)"
publish = false

[lib]
# Must match the last component of tool.maturin.module-name (antecedent._native).
# Naming this "antecedent" collides with the pure-Python package and omits _native.
name = "_native"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
antecedent-core = { path = "../crates/antecedent-core" }
antecedent-data = { path = "../crates/antecedent-data", features = ["arrow"] }
antecedent = { path = "../crates/antecedent" }
antecedent-io = { path = "../crates/antecedent-io" }
antecedent-prob = { path = "../crates/antecedent-prob" }
# Type conversion only (mediation estimand / graph construction for analyze*).
antecedent-expr = { path = "../crates/antecedent-expr" }
antecedent-graph = { path = "../crates/antecedent-graph" }
antecedent-model = { path = "../crates/antecedent-model" }
antecedent-attribution = { path = "../crates/antecedent-attribution" }
antecedent-stats = { path = "../crates/antecedent-stats" }
antecedent-validate = { path = "../crates/antecedent-validate" }
antecedent-discovery = { path = "../crates/antecedent-discovery" }
pyo3 = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
numpy = { workspace = true }
serde_json = { workspace = true }
