[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "causal"
version = "0.1.0"
description = "Python bindings for causal-library"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "causal._native"
