[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "causal"
version = "0.1.0"
description = "Python bindings for causal-library"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "causal._native"

[dependency-groups]
dev = [
    "numpy>=2.4.6",
    "pytest>=9.1.1",
]
