[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "antecedent"
version = "0.1.0"
description = "Antecedent — explicit causal inference for Python and Rust"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
  "numpy>=1.26",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "antecedent._native"

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "numpy>=2.4.6",
    "pyarrow>=25.0.0",
    "pytest>=9.1.1",
]
