[package]
name = "antecedent-attribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Anomaly, distribution-change, and Shapley attribution"
readme = "README.md"

[lints]
workspace = true

[dependencies]
antecedent-core = { version = "0.1.0", path = "../antecedent-core" }
antecedent-data = { version = "0.1.0", path = "../antecedent-data" }
antecedent-graph = { version = "0.1.0", path = "../antecedent-graph" }
antecedent-kernels = { version = "0.1.0", path = "../antecedent-kernels" }
antecedent-model = { version = "0.1.0", path = "../antecedent-model" }
antecedent-counterfactual = { version = "0.1.0", path = "../antecedent-counterfactual" }
antecedent-prob = { version = "0.1.0", path = "../antecedent-prob" }
antecedent-stats = { version = "0.1.0", path = "../antecedent-stats" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "shapley"
harness = false
