[package]
name = "antecedent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core identifiers, schemas, assumptions, provenance, and execution policy for Antecedent"
readme = "README.md"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
