[package]
name = "antecedent-design"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Experiment/measurement design, EIG ranking, and decision utilities"
readme = "README.md"

[lints]
workspace = true

[dependencies]
antecedent-core = { version = "0.1.0", path = "../antecedent-core" }
antecedent-kernels = { version = "0.1.0", path = "../antecedent-kernels" }
antecedent-prob = { version = "0.1.0", path = "../antecedent-prob" }
antecedent-stats = { version = "0.1.0", path = "../antecedent-stats" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "design_rank"
harness = false
