[package]
name = "antecedent-estimate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Estimators for identified causal functionals"
readme = "README.md"

[lints]
workspace = true

[dependencies]
antecedent-core = { version = "0.1.0", path = "../antecedent-core" }
antecedent-data = { version = "0.1.0", path = "../antecedent-data" }
antecedent-expr = { version = "0.1.0", path = "../antecedent-expr" }
antecedent-kernels = { version = "0.1.0", path = "../antecedent-kernels" }
antecedent-prob = { version = "0.1.0", path = "../antecedent-prob" }
antecedent-stats = { version = "0.1.0", path = "../antecedent-stats" }
thiserror = { workspace = true }

[dev-dependencies]
antecedent-graph = { version = "0.1.0", path = "../antecedent-graph" }
antecedent-identify = { version = "0.1.0", path = "../antecedent-identify" }
criterion = { workspace = true }

[[bench]]
name = "propensity_bootstrap"
harness = false

[[bench]]
name = "posterior_functional"
harness = false

[[bench]]
name = "temporal_mediation"
harness = false
