[package]
name = "antecedent-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Probabilistic and structural causal models, mechanisms, and sampling"
readme = "README.md"

[lints]
workspace = true

[dependencies]
antecedent-core = { version = "0.1.0", path = "../antecedent-core" }
antecedent-data = { version = "0.1.0", path = "../antecedent-data" }
antecedent-graph = { version = "0.1.0", path = "../antecedent-graph" }
antecedent-kernels = { version = "0.1.0", path = "../antecedent-kernels" }
antecedent-prob = { version = "0.1.0", path = "../antecedent-prob" }
antecedent-stats = { version = "0.1.0", path = "../antecedent-stats" }
thiserror = { workspace = true }

[features]
default = []
# Gaussian-process mechanism family.
gaussian-process = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "sample_overlay"
harness = false
