[package]
name = "antecedent-prob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Probability distributions, columnar posteriors, priors, and inference backends"
readme = "README.md"

[lints]
workspace = true

[dependencies]
antecedent-core = { version = "0.1.0", path = "../antecedent-core" }
antecedent-kernels = { version = "0.1.0", path = "../antecedent-kernels" }
thiserror = { workspace = true }

[features]
default = ["hmc"]
# Native HMC sampling backend. Empty feature flag; always compiled when enabled.
hmc = []
# Reserved for SMC; not yet implemented as a separate backend.
smc = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "laplace_glm"
harness = false
