[package]
name = "antecedent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Antecedent — explicit causal inference facade (identify → estimate → refute)"
readme = "README.md"
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
antecedent-core = { version = "0.1.0", path = "../antecedent-core" }
antecedent-data = { version = "0.1.0", path = "../antecedent-data" }
antecedent-discovery = { version = "0.1.0", path = "../antecedent-discovery" }
antecedent-estimate = { version = "0.1.0", path = "../antecedent-estimate" }
antecedent-expr = { version = "0.1.0", path = "../antecedent-expr" }
antecedent-graph = { version = "0.1.0", path = "../antecedent-graph" }
antecedent-identify = { version = "0.1.0", path = "../antecedent-identify" }
antecedent-io = { version = "0.1.0", path = "../antecedent-io" }
antecedent-prob = { version = "0.1.0", path = "../antecedent-prob" }
antecedent-stats = { version = "0.1.0", path = "../antecedent-stats" }
antecedent-validate = { version = "0.1.0", path = "../antecedent-validate" }
antecedent-model = { version = "0.1.0", path = "../antecedent-model" }
antecedent-counterfactual = { version = "0.1.0", path = "../antecedent-counterfactual" }
antecedent-attribution = { version = "0.1.0", path = "../antecedent-attribution" }
antecedent-design = { version = "0.1.0", path = "../antecedent-design" }
antecedent-state = { version = "0.1.0", path = "../antecedent-state" }
thiserror = { workspace = true }

[dev-dependencies]
antecedent-kernels = { version = "0.1.0", path = "../antecedent-kernels" }
serde_json = { workspace = true }
