[package]
name = "causal-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Static ATE identify-estimate-refute analysis facade"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-discovery = { path = "../causal-discovery" }
causal-estimate = { path = "../causal-estimate" }
causal-graph = { path = "../causal-graph" }
causal-identify = { path = "../causal-identify" }
causal-io = { path = "../causal-io" }
causal-validate = { path = "../causal-validate" }

[dev-dependencies]
serde_json = "1"
