[package]
name = "causal-attribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Basic anomaly attribution and causal influence (Phase 7 slice)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-graph = { path = "../causal-graph" }
causal-model = { path = "../causal-model" }
causal-counterfactual = { path = "../causal-counterfactual" }
