[package]
name = "causal-attribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Anomaly, distribution-change, and Shapley attribution"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-graph = { path = "../causal-graph" }
causal-kernels = { path = "../causal-kernels" }
causal-model = { path = "../causal-model" }
causal-counterfactual = { path = "../causal-counterfactual" }
causal-prob = { path = "../causal-prob" }
causal-stats = { path = "../causal-stats" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "shapley"
harness = false
