[package]
name = "causal-counterfactual"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Abduction-action-prediction counterfactual evaluation"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-graph = { path = "../causal-graph" }
causal-model = { path = "../causal-model" }
causal-prob = { path = "../causal-prob" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "counterfactual_batch"
harness = false
