[package]
name = "causal-counterfactual"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Abduction-action-prediction counterfactual evaluation"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { version = "0.1.0", path = "../causal-core" }
causal-data = { version = "0.1.0", path = "../causal-data" }
causal-graph = { version = "0.1.0", path = "../causal-graph" }
causal-model = { version = "0.1.0", path = "../causal-model" }
causal-prob = { version = "0.1.0", path = "../causal-prob" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "counterfactual_batch"
harness = false
