[package]
name = "causal-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Library-owned causal data views and Arrow-backed adapters"
readme = "README.md"

[lints]
workspace = true

[features]
default = ["arrow"]
arrow = [
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:arrow-buffer",
    "dep:arrow-data",
    "arrow-array/ffi",
    "arrow-schema/ffi",
]

[dependencies]
causal-core = { version = "0.1.0", path = "../causal-core" }
causal-kernels = { version = "0.1.0", path = "../causal-kernels" }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
arrow-buffer = { workspace = true, optional = true }
arrow-data = { workspace = true, optional = true }
thiserror = { workspace = true }
realfft = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
